--- a/projet-mobile-ionic/src/app/accueil/accueil.page.html
+++ b/projet-mobile-ionic/src/app/accueil/accueil.page.html
@@ -1,19 +1,40 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-avatar><img src="/assets/icon/logo.jpeg"></ion-avatar>
-    <ion-avatar><img src="/assets/icon/user.png" alt=""></ion-avatar>
-  </ion-toolbar>
+<ion-header [translucent]="true" style="margin-bottom: 5%; height: 10%; margin-top: 30px; padding: 2px">
+  <div class="entete">
+    <ion-menu-button slot="start" menu="first" style="width: 20%; float: left ;height: 50px"></ion-menu-button>
+   <img src="/assets/icon/logo.jpeg" style="display: inline; width: 20%; margin-left: 15%; height: 50px">
+    <img src="/assets/icon/user.png" alt="" style="float: right;display: inline; width: 20%;height: 50px">
+  </div>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-card>
-    <ion-label>Mon solde disponible</ion-label>
-    <ion-label><h1>150 000</h1>fcfa</ion-label>
+  <ion-card class="card">
+    <ion-label style="font-weight: bold">Mon solde disponible</ion-label>
+  <ion-card-content class="solde">
+    <ion-label><h1>150 000 </h1> fcfa</ion-label>
+    <ion-icon name="eye-off-outline" style="color: deepskyblue; float: right; margin-top:1%; width:10%; height:30px"></ion-icon>
+  </ion-card-content>
     <ion-label>Mise à jour le 22/02/21 à 13:15</ion-label>
   </ion-card>
-  <ion-card>Dépot</ion-card>
-  <ion-card>Retrait</ion-card>
-  <ion-card>Dépot</ion-card>
-  <ion-card>Dépot</ion-card>
-  <ion-card>Dépot</ion-card>
+  <ion-card class="card" routerLink="/depots"><ion-icon name="return-up-forward-outline" class="icone"></ion-icon>Dépot
+    <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
+  </ion-card>
+  <ion-card class="card" routerLink="/retrait"><ion-icon name="return-up-back-outline" class="icone"></ion-icon>Retrait
+    <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
+  </ion-card>
+  <ion-card class="card"><ion-icon name="sync-outline" class="icone"></ion-icon>Mes Transactions
+    <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
+  </ion-card>
+  <ion-card class="card"><ion-icon name="checkmark-circle-outline" class="icone" style="color: red"></ion-icon>Toutes les Transactions
+    <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
+  </ion-card>
+  <ion-card class="card"><ion-icon name="filter-outline" class="icone" style="transform: rotate(90deg)"></ion-icon>Mes Commissions
+    <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
+  </ion-card>
+  <ion-card>
+  <ion-icon class="iconify" data-icon="ant-design:calculator-filled" data-inl(click)="deconnexion()"ine="false" style="color: red"></ion-icon>
+    Calculateur de Frais
+    <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
+  </ion-card>
+  <ion-card class="card" (click)="deconnexion()"><ion-icon name="arrow-undo-circle-outline" class="icone"></ion-icon>Déconnexion
+    <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
+  </ion-card>
 </ion-content>
