--- a/projet-mobile-ionic/src/app/home/home.page.html
+++ b/projet-mobile-ionic/src/app/home/home.page.html
@@ -1,5 +1,37 @@
-<ion-tabs>
+<ion-menu side="start" menuId="first" contentId="accueil" class="my-custom-menu">
+  <ion-header>
+    <ion-toolbar color="secondary">
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content style="background-color:dodgerblue">
+    <ion-list lines="inset">
+      <ion-item routerLink="/accueil" routerDirection="root">
+        <ion-icon name="home-outline"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-item>
+      <ion-item routerLink="/" routerDirection="root">
+        <ion-icon name="sync-outline"></ion-icon>
+        <ion-label>Mes transactions</ion-label>
+      </ion-item>
+      <ion-item  routerLink="/" routerDirection="root">
+        <ion-icon name="filter-outline" class="icone" style="transform: rotate(90deg)"></ion-icon>
+        <ion-label>Mes commissions</ion-label>
+      </ion-item>
+      <ion-item routerLink="/" routerDirection="root">
+        <ion-icon class="iconify" data-icon="ant-design:calculator-filled" data-inline="false"></ion-icon>
+        <ion-label>Calculateur de frais</ion-label>
+      </ion-item>
+      <ion-item class="logout" routerDirection="root">
+        <ion-icon name="arrow-undo-circle-outline"></ion-icon>
+        <ion-label>Déconnexion</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+<ion-router-outlet id="accueil"></ion-router-outlet>
 
+<ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="accueil" selected="true">
       <ion-icon name="home-outline"></ion-icon>
@@ -10,11 +42,10 @@
     </ion-tab-button>
 
     <ion-tab-button tab="commissions">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="filter-outline" class="icone"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="calculatrice">
-      <ion-icon name="square"></ion-icon>
+    <ion-icon class="iconify" data-icon="ant-design:calculator-filled" data-inline="false"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
