--- a/projet-mobile-ionic/src/app/accueil/accueil.page.html
+++ b/projet-mobile-ionic/src/app/accueil/accueil.page.html
@@ -30,11 +30,11 @@
     <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
   </ion-card>
   <ion-card>
-  <ion-icon class="iconify" data-icon="ant-design:calculator-filled" data-inl(click)="deconnexion()"ine="false" style="color: red"></ion-icon>
+  <ion-icon class="iconify" data-icon="ant-design:calculator-filled" data-inline="false" style="color: red"></ion-icon>
     Calculateur de Frais
     <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
   </ion-card>
-  <ion-card class="card" (click)="deconnexion()"><ion-icon name="arrow-undo-circle-outline" class="icone"></ion-icon>Déconnexion
+  <ion-card class="card"  (click)="deconnexion()"><ion-icon name="arrow-undo-circle-outline" class="icone"></ion-icon>Déconnexion
     <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
   </ion-card>
 </ion-content>
