--- a/projet-mobile-ionic/src/app/login/login.page.html
+++ b/projet-mobile-ionic/src/app/login/login.page.html
@@ -1,7 +1,7 @@
-<ion-header style="height: 30%">
-    <ion-card-content style="border-radius: 8px; margin-top: 50px; padding: 5px">
+<ion-header style="height: 31%">
+    <ion-card-content style="border-radius: 8px; margin-top: 80px; padding: 5px">
       <img src="/assets/icon/logo.jpeg" style="display: inline; width: 35%; height: 80px; margin-left: 85px">
-    <ion-card-title style=" text-align: center;font-family: 'Liberation Serif'" color="title">login
+    <ion-card-title style=" text-align: center;font-family: 'Liberation Serif'; margin-top: 4%" color="title">login
     </ion-card-title>
       <div id="bottom-bar"></div>
     </ion-card-content>
