--- a/projet-mobile-ionic/src/app/calculatrice/calculatrice.page.html
+++ b/projet-mobile-ionic/src/app/calculatrice/calculatrice.page.html
@@ -1,9 +1,27 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>calculatrice</ion-title>
-  </ion-toolbar>
-</ion-header>
+  <ion-header [translucent]="true" style="margin-bottom: 5%;height: 25%; width: 100%; margin-top: 30px">
+    <div class="entete">
+      <ion-icon name="home-outline" routerLink="/home" style=" width:12% ; height: 40px; color:#07AEEF"></ion-icon>
+      <img src="/assets/icon/logo.jpeg" style="display: inline; width: 20%; margin-left: 20%; height: 50px; margin-top: 20px">
+    </div>
+    <ion-item style="margin-top: 14%; margin-left:30%">
+      <span class="iconify" data-icon="ant-design:calculator-filled" data-inline="false" style=" color: #07AEEF; width: 20px; height: 20px"></span>
+      Calculatrice</ion-item>
+    <div id="bottom-bar"></div>
+  </ion-header>
 
-<ion-content>
+  <ion-content>
+    <form [formGroup]="calcForm" (ngSubmit)="onSubmit()">
+      <ion-card>
+        <ion-label>Type de transaction</ion-label><br>
+        <ion-input type="text" class="form-controll" name="title" formControlName="telephone"></ion-input>
 
-</ion-content>
+      </ion-card>
+      <ion-card>
+        <ion-label>Montant</ion-label><br>
+        <ion-input type="text" class="form-controll" name="description" formControlName="password"></ion-input>
+
+      </ion-card>
+       <ion-button type="submit" color="danger" style="margin-left: 20%">Calculer</ion-button>
+    </form>
+  </ion-content>
+
