--- a/projet-mobile-ionic/src/app/home/home.page.html
+++ b/projet-mobile-ionic/src/app/home/home.page.html
@@ -11,7 +11,7 @@
         <ion-label>Home</ion-label>
       </ion-item>
       <ion-item routerLink="/" routerDirection="root">
-        <ion-icon name="sync-outline"></ion-icon>
+        <ion-icon name="sync-outline" class="icone"></ion-icon>
         <ion-label>Mes transactions</ion-label>
       </ion-item>
       <ion-item  routerLink="/" routerDirection="root">
@@ -19,8 +19,8 @@
         <ion-label>Mes commissions</ion-label>
       </ion-item>
       <ion-item routerLink="/" routerDirection="root">
-        <ion-icon class="iconify" data-icon="ant-design:calculator-filled" data-inline="false"></ion-icon>
-        <ion-label>Calculateur de frais</ion-label>
+        <span class="iconify" data-icon="ant-design:calculator-filled" data-inline="false"></span>
+    <ion-label>Calculateur de frais</ion-label>
       </ion-item>
       <ion-item class="logout" routerDirection="root">
         <ion-icon name="arrow-undo-circle-outline"></ion-icon>
