--- a/projet-mobile-ionic/src/app/accueil/accueil.page.html
+++ b/projet-mobile-ionic/src/app/accueil/accueil.page.html
@@ -20,13 +20,13 @@
   <ion-card class="card" routerLink="/retrait"><ion-icon name="return-up-back-outline" class="icone"></ion-icon>Retrait
     <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
   </ion-card>
-  <ion-card class="card"><ion-icon name="sync-outline" class="icone"></ion-icon>Mes Transactions
+  <ion-card class="card" routerLink="/mes-transactions"><ion-icon name="sync-outline" class="icone"></ion-icon>Mes Transactions
     <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
   </ion-card>
-  <ion-card class="card"><ion-icon name="checkmark-circle-outline" class="icone" style="color: red"></ion-icon>Toutes les Transactions
+  <ion-card class="card" routerLink="/transactions"><ion-icon name="checkmark-circle-outline" class="icone" style="color: red"></ion-icon>Toutes les Transactions
     <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
   </ion-card>
-  <ion-card class="card"><ion-icon name="filter-outline" class="icone" style="transform: rotate(90deg)"></ion-icon>Mes Commissions
+  <ion-card class="card" routerLink="/commissions"><ion-icon name="filter-outline" class="icone" style="transform: rotate(90deg)"></ion-icon>Mes Commissions
     <ion-icon name="chevron-forward-outline" class="lien"></ion-icon>
   </ion-card>
   <ion-card routerLink="/calculatrice">
