--- a/projet-mobile-ionic/src/app/couverture-appli/couverture-appli.page.html
+++ b/projet-mobile-ionic/src/app/couverture-appli/couverture-appli.page.html
@@ -1,5 +1,12 @@
+<ion-content class="no-scroll">
+  <div class="background-container">
+    <div>
+      <ion-card>
+        <ion-card-header>
+          <img src="/assets/icon/" alt="">
+        </ion-card-header>
+      </ion-card>
+    </div>
+  </div>
 
-
-<ion-content [fullscreen]="true" class="content">
-  <ion-img src="/assets/icon/background.jpeg"></ion-img>
 </ion-content>
