--- a/projet-mobile-ionic/src/app/couverture-appli/couverture-appli.page.scss
+++ b/projet-mobile-ionic/src/app/couverture-appli/couverture-appli.page.scss
@@ -1,9 +1,40 @@
 
-.content{
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-attachment: fixed;
-  min-width: 100%;
-  min-height: 100%;
+ion-content {
+  --ion-background-color: #ddb;
 }
+.background-container {
+  height: 100vh;
+  width: 100%;
+  background: url("./.././../assets/icon/bg.jpeg");
+  display: flex;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  flex-direction: column;
+  justify-content: center;
+}
+
+ion-card {
+  background-color: red;
+  text-align: center;
+  background: transparent;
+  box-shadow: none;
+  img {
+    width: 42%;
+    height: 120px;
+    border: none;
+    -moz-border-radius : 80px;
+    -webkit-border-radius: 80px;
+    border-radius: 80px;
+  }
+  ion-card-tittle {
+    font-size: 20px;
+    color: #D2EDDD;
+    font-weight: 400;
+  }
+}
+
+// .image img {
+//   width: 100%;
+//   height: 100%;
+// }
