--- a/projet-mobile-ionic/src/app/retrait/retrait.page.html
+++ b/projet-mobile-ionic/src/app/retrait/retrait.page.html
@@ -1,16 +1,20 @@
 <ion-content>
-  <ion-header [translucent]="true" style="margin-bottom: 5%; height: 40%;width: 100%; margin-top: 30px; padding: 2px">
+  <form [formGroup]="retraitForm" (ngSubmit)="GetRetrait()">
+    <div [formGroupName]="'clientRetrait'">
+
+    <ion-header [translucent]="true" style="margin-bottom: 5%; height: 20%;width: 100%; margin-top: 10px; padding: 2px">
     <div class="entete">
       <ion-icon name="home-outline" routerLink="/home" style=" width:10% ;height: 30px"></ion-icon>
       <img src="/assets/icon/logo.jpeg" style="display: inline; width: 20%; margin-left: 20%; height: 50px">
     </div>
-    <ion-item style="margin-top: 10px; margin-left:30%">
+    <ion-item style="margin-left:30%">
       <ion-icon name="return-up-forward-outline" style=" margin-right: 8px; color: deepskyblue"></ion-icon>Retrait</ion-item>
     <div id="bottom-bar"></div>
-    <ion-card>
-      <ion-label>Code</ion-label>
-      <ion-input></ion-input>
-    </ion-card>
+    <ion-item  style="top: 20px">
+      <ion-label position="floating">Code</ion-label>
+      <ion-input type="text" placeholder="234-543-254" formControlName="codeTrans" ></ion-input>
+    </ion-item>
+
   </ion-header>
   <div class="content-form-depot">
     <div id="content-menu-choice" padding>
@@ -23,6 +27,48 @@
         <div class="menu-bar-bottom" [hidden]="!hide"></div>
       </div>
     </div>
+  <div [hidden]="hide" id="content-form-emeteur" style="height: 50%">
+    <ion-item *ngIf="dataCode">
+        <ion-label position="floating">N° CNI</ion-label>
+        <ion-input  formControlName="numCni"></ion-input>
+      </ion-item>
+    <ion-item *ngIf="dataCode">
+        <ion-label position="floating">Nom & Prenom</ion-label>
+        <ion-input readonly style="top: 10px">{{dataCode.clientRetrait.nomComplet}}</ion-input>
+      </ion-item>
+      <ion-item *ngIf="dataCode">
+        <ion-label position="floating">Montant A Recevoir</ion-label>
+        <ion-input style="top:10px" readonly>{{dataCode.montant}}</ion-input>
+      </ion-item>
+        <ion-item *ngIf="dataCode">
+          <ion-label position="floating">Telephone</ion-label><br>
+          <ion-input readonly style="top: 10px">{{dataCode.clientRetrait.telephone}}</ion-input>
+        </ion-item>
+        <ion-item *ngIf="dataCode">
+          <ion-label position="floating">Date de retrait</ion-label><br>
+          <ion-input readonly style="top: 15px">{{dataCode.dateRetrait}}</ion-input>
+        </ion-item>
   </div>
-
+    <div [hidden]="!hide" id="content-form-beneficiaire">
+        <ion-item *ngIf="dataCode">
+          <ion-label position="floating" style="top: 10px">Nom & Prenom</ion-label>
+          <ion-input readonly style="top: 10px" >{{dataCode.clientDepot.nomComplet}}</ion-input>
+        </ion-item>
+        <ion-item *ngIf="dataCode">
+          <ion-label position="floating" >Montant A Recevoir</ion-label>
+          <ion-input readonly style="top: 10px" >{{dataCode.montant}}</ion-input>
+        </ion-item>
+        <ion-item *ngIf="dataCode">
+          <ion-label position="floating">Telephone</ion-label>
+          <ion-input readonly style="top: 10px" >{{dataCode.clientDepot.telephone}}</ion-input>
+        </ion-item>
+        <ion-item *ngIf="dataCode">
+          <ion-label position="floating">Date d'envoie</ion-label>
+          <ion-input readonly style="top: 10px">{{dataCode.dateDepot}}</ion-input>
+        </ion-item>
+      <ion-button type="submit" color="secondary" style="position: relative;top:20px;width: 70%;margin: auto;height: 50px;" expand="block" shape="round" fill="outline" color="secondary">Valider</ion-button>
+    </div>
+  </div>
+    </div>
+  </form>
 </ion-content>
